# cpp_logger

./: .gitignore  CMakeLists.txt  README.md
src/: logger.cpp  logger.h  main.cpp  util.cpp  util.h
